--- a/fireworks.html
+++ b/fireworks.html
@@ -17,62 +17,71 @@
 <body>
   <script>
     // ==================================================================
-    // ★★★ パラメータ調整エリア ★★★
+    // --- パラメータ設定 ---
     // ==================================================================
-    const NEW_FIREWORK_PROBABILITY = 0.01;
-    const CLICK_FIREWORK_COUNT = 1;
-    const BACKGROUND_FADE_ALPHA = 15;
-    const LAUNCH_SPEED_MIN = -11;
-    const LAUNCH_SPEED_MAX = -6;
-    const GRAVITY = 0.1;
-    const PARTICLE_COUNT_MIN = 80;
-    const PARTICLE_COUNT_MAX = 200;
-    const OUTER_RING_COUNT = 15;
-    const COLOR_CHANGE_THRESHOLD = 135;
-    const DEFAULT_PARTICLE_WEIGHT = 2;
-    const KAMURO_TRAIL_WEIGHT = 1;
-    const EXPLOSION_SPEED_MIN = 0.5;
-    const EXPLOSION_SPEED_MAX = 10;
-    const PARTICLE_DRAG = 0.96;
-    const PARTICLE_FADE_RATE = 3.5;
-    const SPEED_COLOR_THRESHOLD = 5.0;
-    const SPEED_COLOR_RING_COUNT = 15;
-    const KAMURO_GRAVITY = 0.03;
-    const KAMURO_FADE_RATE = 1.8;
-    const HEART_PARTICLE_COUNT = 30;
-    const HEART_EXPLOSION_SCALE = 0.2;
+    // 花火の生成と背景
+    const NEW_FIREWORK_PROBABILITY = 0.01;      // 新しい花火が自動で打ちあがる確率
+    const CLICK_FIREWORK_COUNT = 1;           // 画面クリック時に打ちあがる花火の数
+    const BACKGROUND_FADE_ALPHA = 15;         // 背景のフェードアウト効果の透明度（低いほど軌跡が長く残る）
 
-    const SOUND_DELAY_MS = 1000;
+    // 打ち上げ時の物理挙動
+    const LAUNCH_SPEED_MIN = -11;             // 打ち上げの初速（最小値）
+    const LAUNCH_SPEED_MAX = -6;              // 打ち上げの初速（最大値）
+    const GRAVITY = 0.1;                      // 通常の重力加速度
 
-    const LAUNCH_SOUND_PROBABILITY = 0.2;
+    // 爆発時のパーティクル（粒子）設定
+    const PARTICLE_COUNT_MIN = 80;            // 爆発時のパーティクル数（最小値）
+    const PARTICLE_COUNT_MAX = 200;           // 爆発時のパーティクル数（最大値）
+    const OUTER_RING_COUNT = 15;              // 爆発時に最も外側に生成されるパーティクルの数
+    const COLOR_CHANGE_THRESHOLD = 135;       // 色変化エフェクトで色が変わるまでの時間（ライフスパン基準）
+    const DEFAULT_PARTICLE_WEIGHT = 2;        // パーティクルの描画サイズ
+    const KAMURO_TRAIL_WEIGHT = 1;            // Kamuroエフェクトの軌跡の描画サイズ
+    const EXPLOSION_SPEED_MIN = 0.5;          // 爆発時のパーティクルの速度（最小値）
+    const EXPLOSION_SPEED_MAX = 10;           // 爆発時のパーティクルの速度（最大値）
+    const PARTICLE_DRAG = 0.96;               // パーティクルの空気抵抗（1に近いほど減速しにくい）
+    const PARTICLE_FADE_RATE = 3.5;           // パーティクルが消える速さ
 
+    // 特殊エフェクト関連
+    const SPEED_COLOR_THRESHOLD = 5.0;        // SpeedColorエフェクトで色が変わる速度のしきい値
+    const SPEED_COLOR_RING_COUNT = 15;        // SpeedColorエフェクトで内側に生成されるパーティクルの数
+    const KAMURO_GRAVITY = 0.03;              // Kamuroエフェクトのパーティクルにかかる重力
+    const KAMURO_FADE_RATE = 1.8;             // Kamuroエフェクトのパーティクルが消える速さ
+    const HEART_PARTICLE_COUNT = 30;          // ハート形状を構成するパーティクルの数
+    const HEART_EXPLOSION_SCALE = 0.2;        // ハートの大きさの倍率
+
+    // 音声関連
+    const SOUND_DELAY_MS = 1000;              // 音が鳴るまでの遅延時間（ミリ秒）
+    const LAUNCH_SOUND_PROBABILITY = 0.2;     // 打ち上げ音が鳴る確率
+    const LAUNCH_SOUND_VOLUME = 0.1;          // 打ち上げ音の音量
+    const EXPLOSION_SOUND_VOLUME = 1.0;       // 爆発音の音量
     // ==================================================================
 
+    // --- グローバル変数 ---
+    // 打ち上げ音のサウンドプール
     const launchSounds = [];
-    const NUM_LAUNCH_SOUNDS = 20;
-    let nextLaunchSound = 0;
+    const NUM_LAUNCH_SOUNDS = 20; // 同時再生可能な打ち上げ音の最大数
+    let nextLaunchSound = 0;      // 次に再生する打ち上げ音のインデックス
 
-    // ★ 変更点: 爆発音関連の変数を再定義
+    // 爆発音のサウンドプール
     const explosionSounds = [];
-    const NUM_EXPLOSION_SOUNDS = 20;
-    let nextExplosionSound = 0;
+    const NUM_EXPLOSION_SOUNDS = 20; // 同時再生可能な爆発音の最大数
+    let nextExplosionSound = 0;      // 次に再生する爆発音のインデックス
 
-    const LAUNCH_SOUND_VOLUME = 0.1;
-    const EXPLOSION_SOUND_VOLUME = 1.0;
-
+    // 花火オブジェクトを格納する配列と重力ベクトル
     let fireworks = [];
     let gravity;
     let kamuroGravity;
 
+    // p5.jsのセットアップ前に音声ファイルを読み込む
     function preload() {
       try {
         soundFormats('mp3');
-        // 打ち上げ音の読み込み
+        // 打ち上げ音をサウンドプールに読み込む
         for (let i = 0; i < NUM_LAUNCH_SOUNDS; i++) {
           launchSounds.push(loadSound('launch.mp3'));
         }
 
-        // ★ 変更点: 5種類の爆発音をそれぞれ4回ずつ読み込み、合計20個のサウンドプールを作成
+        // 複数種類の爆発音ファイルをサウンドプールに読み込む
         const explosionSoundFiles = [
           'explosion1.mp3',
           'explosion2.mp3',
@@ -92,6 +101,7 @@
       }
     }
 
+    // 初期設定（最初に一度だけ実行される）
     function setup() {
       createCanvas(windowWidth, windowHeight);
       gravity = createVector(0, GRAVITY);
@@ -99,18 +109,22 @@
       stroke(255);
       colorMode(HSB);
 
-      // ★ 変更点: 爆発音の再生順がランダムになるようにサウンドプールをシャッフル
+      // 爆発音の再生順をランダム化するため、サウンドプールをシャッフルする
       shuffle(explosionSounds, true);
     }
 
+    // 描画ループ（毎フレーム実行される）
     function draw() {
+      // 背景を半透明で塗りつぶし、軌跡を表現する
       colorMode(RGB);
       background(0, 0, 0, BACKGROUND_FADE_ALPHA);
 
+      // 一定確率で新しい花火を打ち上げる
       if (random(1) < NEW_FIREWORK_PROBABILITY) {
         fireworks.push(new Firework());
       }
 
+      // すべての花火を更新・描画し、終了したものを配列から削除する
       for (let i = fireworks.length - 1; i >= 0; i--) {
         fireworks[i].update();
         fireworks[i].show();
@@ -120,30 +134,37 @@
       }
     }
 
+    // マウスクリック時の処理
     function mousePressed() {
+      // ブラウザの音声再生制限をユーザー操作によって解除する
       if (getAudioContext().state !== 'running') {
         getAudioContext().resume();
       }
 
+      // クリックした位置に花火を打ち上げる
       for (let i = 0; i < CLICK_FIREWORK_COUNT; i++) {
         fireworks.push(new Firework(mouseX));
       }
     }
 
-    // ===== パーティクル（粒子）クラス =====
+    // ==================================================================
+    // Particleクラス（花火の粒子を表現）
+    // ==================================================================
     class Particle {
       constructor(x, y, isFirework, options = {}) {
-        this.pos = createVector(x, y);
-        this.isFirework = isFirework;
-        this.lifespan = 255;
-        this.acc = createVector(0, 0);
-        this.history = [];
+        this.pos = createVector(x, y);          // 位置
+        this.isFirework = isFirework;           // 打ち上げ用か爆発後かのフラグ
+        this.lifespan = 255;                    // 寿命（透明度）
+        this.acc = createVector(0, 0);          // 加速度
+        this.history = [];                      // 軌跡描画用の座標履歴
 
-        this.hu = options.hu || 0;
-        this.hu2 = options.hu2 || this.hu;
-        this.type = options.type || 'point';
-        this.effect = options.effect || 'normal';
+        // オプション設定
+        this.hu = options.hu || 0;              // 色相1
+        this.hu2 = options.hu2 || this.hu;      // 色相2（色変化エフェクト用）
+        this.type = options.type || 'point';    // 描画タイプ ('point' or 'line')
+        this.effect = options.effect || 'normal'; // エフェクトの種類
 
+        // 打ち上げ用か爆発後かで初速を決定
         if (isFirework) {
           this.vel = createVector(0, random(LAUNCH_SPEED_MIN, LAUNCH_SPEED_MAX));
         } else {
@@ -151,33 +172,43 @@
         }
       }
 
+      // 粒子に力（加速度）を加える
       applyForce(force) { this.acc.add(force); }
 
+      // 粒子の状態を更新する
       update() {
         if (!this.isFirework) {
+          // 爆発後の粒子の場合、空気抵抗と寿命の減少を適用
           this.vel.mult(PARTICLE_DRAG);
           this.lifespan -= (this.effect === 'kamuro') ? KAMURO_FADE_RATE : PARTICLE_FADE_RATE;
+          // 'line'タイプの場合、軌跡の履歴を保存
           if (this.type === 'line') {
             this.history.push(this.pos.copy());
             if (this.history.length > 30) this.history.splice(0, 1);
           }
         }
+        // 物理演算
         this.vel.add(this.acc);
         this.pos.add(this.vel);
-        this.acc.mult(0);
+        this.acc.mult(0); // 加速度をリセット
       }
 
+      // 粒子の寿命が尽きたか判定
       done() { return this.lifespan < 0; }
 
+      // 粒子を描画する
       show() {
         colorMode(HSB);
         if (!this.isFirework) {
+          // 爆発後の粒子
           strokeWeight((this.effect === 'kamuro') ? KAMURO_TRAIL_WEIGHT : DEFAULT_PARTICLE_WEIGHT);
           let currentHu = this.hu;
+          // 色変化エフェクトの処理
           if (this.effect === 'colorChange' && this.lifespan <= COLOR_CHANGE_THRESHOLD) {
             currentHu = this.hu2;
           }
           stroke(currentHu, 255, 255, this.lifespan);
+          // 描画タイプに応じた処理
           if (this.type === 'line') {
             beginShape();
             noFill();
@@ -187,6 +218,7 @@
             point(this.pos.x, this.pos.y);
           }
         } else {
+          // 打ち上げ時の粒子
           strokeWeight(4);
           stroke(this.hu, 255, 255);
           point(this.pos.x, this.pos.y);
@@ -194,28 +226,36 @@
       }
     }
 
-    // ===== 花火クラス =====
+    // ==================================================================
+    // Fireworkクラス（打ち上げから爆発までを管理）
+    // ==================================================================
     class Firework {
       constructor(x) {
-        this.launchSoundInstance = null;
+        this.launchSoundInstance = null; // 再生中の打ち上げ音インスタンス
 
+        // 一定確率で打ち上げ音を再生
         if (random(1) < LAUNCH_SOUND_PROBABILITY && launchSounds.length > 0) {
             this.launchSoundInstance = launchSounds[nextLaunchSound];
             const sound = this.launchSoundInstance;
             if (sound.isLoaded()) {
+                // 遅延させて再生
                 setTimeout(() => {
                     sound.setVolume(LAUNCH_SOUND_VOLUME);
                     sound.play();
                 }, SOUND_DELAY_MS);
             }
+            // 次に再生する音声のインデックスを更新
             nextLaunchSound = (nextLaunchSound + 1) % NUM_LAUNCH_SOUNDS;
         }
 
+        // 花火のエフェクトをランダムに決定
         const effects = ['normal', 'colorChange', 'bicolor', 'kamuro', 'speedColor', 'heart', 'normal', 'colorChange', 'bicolor', 'kamuro'];
         this.effect = random(effects);
-        this.hu = (this.effect === 'heart') ? 350 : random(360);
+        // エフェクトに応じて色相や描画タイプを設定
+        this.hu = (this.effect === 'heart') ? 350 : random(360); // ハートは赤系に固定
         this.type = (this.effect === 'kamuro') ? 'line' : 'point';
 
+        // 特定のエフェクト用に2色目の色相を設定
         if (this.effect === 'speedColor' || this.effect === 'bicolor' || this.effect === 'colorChange') {
           this.hu2 = random(360);
         }
@@ -224,6 +264,7 @@
           this.huFast = random(360);
         }
 
+        // 打ち上げ用のParticleオブジェクトを生成
         const startX = x || random(200, width - 200);
         this.firework = new Particle(startX, height, true, { hu: this.hu });
         this.exploded = false;
@@ -231,22 +272,29 @@
         this.particleCount = random(PARTICLE_COUNT_MIN, PARTICLE_COUNT_MAX);
       }
 
+      // 花火が終了したか判定（爆発し、全ての粒子が消えたか）
       done() { return this.exploded && this.particles.length === 0; }
 
+      // 花火の状態を更新（打ち上げ中 or 爆発後）
       update() {
         if (!this.exploded) {
+          // 打ち上げ中の処理
           this.firework.applyForce(gravity);
           this.firework.update();
+          // 上昇が止まったら爆発
           if (this.firework.vel.y >= 0) {
             this.exploded = true;
             this.explode();
           }
         } else {
+          // 爆発後の処理
           for (let i = this.particles.length - 1; i >= 0; i--) {
+            // Kamuroエフェクトの場合は専用の重力を適用
             if (this.particles[i].effect === 'kamuro' && !this.particles[i].isFirework) {
               this.particles[i].applyForce(kamuroGravity);
             }
             this.particles[i].update();
+            // 寿命が尽きた粒子を削除
             if (this.particles[i].done()) {
               this.particles.splice(i, 1);
             }
@@ -254,7 +302,9 @@
         }
       }
 
+      // 花火を爆発させ、パーティクルを生成する
       explode() {
+        // 再生中の打ち上げ音があれば停止する
         if (this.launchSoundInstance) {
           const soundToStop = this.launchSoundInstance;
           setTimeout(() => {
@@ -264,18 +314,22 @@
           }, SOUND_DELAY_MS);
         }
 
-        // ★ 変更点: シャッフルされたサウンドプールから順番に再生する
+        // シャッフルされたサウンドプールから爆発音を順番に再生
         if (explosionSounds.length > 0 && explosionSounds[nextExplosionSound].isLoaded()) {
           const sound = explosionSounds[nextExplosionSound];
+          // 次に再生する音声のインデックスを更新
           nextExplosionSound = (nextExplosionSound + 1) % NUM_EXPLOSION_SOUNDS;
 
+          // 遅延させて再生
           setTimeout(() => {
             sound.setVolume(EXPLOSION_SOUND_VOLUME);
             sound.play();
           }, SOUND_DELAY_MS);
         }
 
+        // エフェクトに応じたパーティクル生成処理
         if (this.effect === 'heart') {
+          // ハート形状
           const particleCount = HEART_PARTICLE_COUNT;
           for (let i = 0; i < particleCount; i++) {
             const t = map(i, 0, particleCount, 0, TWO_PI);
@@ -286,9 +340,12 @@
             this.particles.push(new Particle(this.firework.pos.x, this.firework.pos.y, false, particleOptions));
           }
         } else {
+          // その他の形状（球状）
           let maxRandomSpeed = 0;
           let maxSlowSpeed = 0;
           let explosionSpeed = (this.effect === 'kamuro') ? EXPLOSION_SPEED_MAX / 2 : EXPLOSION_SPEED_MAX;
+
+          // 内部のパーティクルをランダムに生成
           for (let i = 0; i < this.particleCount; i++) {
             const vel = p5.Vector.random2D();
             let speed = random(EXPLOSION_SPEED_MIN, explosionSpeed);
@@ -297,6 +354,8 @@
               maxSlowSpeed = speed;
             }
             vel.mult(speed);
+
+            // パーティクルのオプションを設定
             let particleOptions = { velocity: vel, type: this.type, effect: this.effect };
             if (this.effect === 'bicolor') {
               particleOptions.hu = random(1) < 0.5 ? this.hu : this.hu2;
@@ -308,6 +367,8 @@
             }
             this.particles.push(new Particle(this.firework.pos.x, this.firework.pos.y, false, particleOptions));
           }
+
+          // 外殻のパーティクルを生成（きれいな円形にするため）
           const angleIncrementOuter = TWO_PI / OUTER_RING_COUNT;
           for (let i = 0; i < OUTER_RING_COUNT; i++) {
             const angle = i * angleIncrementOuter;
@@ -323,6 +384,8 @@
             }
             this.particles.push(new Particle(this.firework.pos.x, this.firework.pos.y, false, particleOptions));
           }
+
+          // SpeedColorエフェクトの場合、内殻のパーティクルも生成
           if (this.effect === 'speedColor') {
             if (maxSlowSpeed > 0) {
               const angleIncrementInner = TWO_PI / SPEED_COLOR_RING_COUNT;
@@ -337,6 +400,7 @@
         }
       }
 
+      // 花火を描画する
       show() {
         if (!this.exploded) {
           this.firework.show();
