画面リサイズ対応

--- a/fireworks.html
+++ b/fireworks.html
@@ -148,6 +148,15 @@
     }
 
     // ==================================================================
+    // --- ここからが追加・変更箇所 ---
+    // ==================================================================
+    // ウィンドウサイズが変更されたときにキャンバスサイズを追従させる
+    function windowResized() {
+      resizeCanvas(windowWidth, windowHeight);
+    }
+    // ==================================================================
+
+    // ==================================================================
     // Particleクラス（花火の粒子を表現）
     // ==================================================================
     class Particle {
